chore: X-Road 7 file based configuration migration to X-Road 8 (#2963)
* chore: add optional db schema property for db prop source

Refs: XRDDEV-2952

* chore: ini to db migration cli

Refs: XRDDEV-2952

* chore: configuration anchor migration to db

Refs: XRDDEV-2952

* chore: ssl.properties migration, ignore removed keys

Refs: XRDDEV-2952

* chore: user confirmations; code reorganization

Refs: XRDDEV-2952

* chore: devices.ini migration, bash script reorganisation

Refs: XRDDEV-2952

* chore: acme.yml, mail.yml migration to db

Refs: XRDDEV-2952

* chore: proxy-ui-api loading acme and email notification settings from properties

Refs: XRDDEV-2952

* chore: acme and mail properties for local envs migrated.

Refs: XRDDEV-2952

* chore: moving local.yaml and db.properties loading to %native profile in quarkus

Refs: XRDDEV-2952

* chore: enable possibility to turn on trace level logs for x-road

Refs: XRDDEV-2952

* chore: drop local.yaml in signer int tests

Refs: XRDDEV-2952

* chore: fix security server system tests

Refs: XRDDEV-2952

* chore: fix security server system tests

Refs: XRDDEV-2952

* chore: missing op-monitor rpc config

Refs: XRDDEV-2952

* chore: temporary workaround in wsdl validator for the system tests to pass

Refs: XRDDEV-2952

* chore: cleanup

Refs: XRDDEV-2952

* chore: axios version bump

Refs: XRDDEV-2799

* chore: rename signer module properties to kebab-case

Refs: XRDDEV-2952

* chore: quarkus version bump

Refs: XRDDEV-2952

--- a/src/service/backup-manager/backup-manager-application/src/main/resources/application.yaml
+++ b/src/service/backup-manager/backup-manager-application/src/main/resources/application.yaml
@@ -3,8 +3,6 @@ quarkus:
     name: backup-manager
   config:
     locations:
-      - /etc/xroad/conf.d/local.yaml
-      - /etc/xroad/db.properties
       - xroad-common.yaml
       - xroad-logging.yaml
   scheduler:
@@ -24,6 +22,10 @@ quarkus:
 
 "%native":
   quarkus:
+    config:
+      locations:
+        - /etc/xroad/conf.d/local.yaml
+        - /etc/xroad/db.properties
     log:
       file:
         enabled: true
