--- a/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
+++ b/src/service/signer/signer-int-test/src/intTest/resources/compose.intTest.yaml
@@ -7,16 +7,29 @@ services:
       dockerfile: Dockerfile
     pull_policy: always
     environment:
+      - JAVA_TOOL_OPTIONS=-Dxroad.internal.passwordstore-provider=file -Dxroad.internal.passwordstore-file-path=/etc/xroad/
       - XROAD_HOST=signer
       - XROAD_COMMON_RPC_USE_TLS=false
       - XROAD_COMMON_GLOBAL_CONF_SOURCE=FILESYSTEM
-      - XROAD_SIGNER_ADDON_HWTOKEN_ENABLED=true
       - JAVA_TOOL_OPTIONS=-Dxroad.internal.passwordstore-provider=file -Dxroad.internal.passwordstore-file-path=/etc/xroad/
       - XROAD_SIGNER_OCSP_RESPONSE_RETRIEVAL_ACTIVE=true
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL=jdbc:postgresql://db-serverconf:5432/serverconf
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS=org.postgresql.Driver
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME=serverconf
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_PASSWORD=secret
+      - XROAD_SIGNER_DEVICE_CONFIGURATION_FILE=/etc/xroad/signer/devices.ini
+      - XROAD_SIGNER_RPC_LISTEN_ADDRESS=0.0.0.0
+      - XROAD_SIGNER_ADDON_HWTOKEN_ENABLED=true
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-ENABLED=true
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MAX-TOTAL=3
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MAX-IDLE=2
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MIN-IDLE=1
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-ACQUIRE-TIMEOUT=5S
+      - XROAD_SIGNER_MODULES_SOFTHSM2_LIBRARY=/usr/lib/softhsm/libsofthsm2.so
+      - XROAD_SIGNER_MODULES_SOFTHSM2_OS_LOCKING_OK=true
+      - XROAD_SIGNER_MODULES_SOFTHSM2_LIBRARY_CANT_CREATE_OS_THREADS=true
+      - QUARKUS_LOG_LEVEL=INFO
+      - QUARKUS_LOG_CATEGORY__ORG_NIIS_XROAD_SIGNER__LEVEL=DEBUG
     ports:
       - "0:9999" # debug port
     healthcheck:
@@ -46,7 +59,6 @@ services:
       - XROAD_HOST=signer-secondary
       - XROAD_COMMON_RPC_USE_TLS=false
       - XROAD_COMMON_GLOBAL_CONF_SOURCE=FILESYSTEM
-      - XROAD_SIGNER_ADDON_HWTOKEN_ENABLED=true
       - JAVA_TOOL_OPTIONS=-Dxroad.internal.passwordstore-provider=file -Dxroad.internal.passwordstore-file-path=/etc/xroad/
       - XROAD_SIGNER_OCSP_RESPONSE_RETRIEVAL_ACTIVE=true
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL=jdbc:postgresql://db-serverconf:5432/serverconf
@@ -54,6 +66,19 @@ services:
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME=serverconf
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_PASSWORD=secret
       - XROAD_NODE_TYPE=secondary
+      - XROAD_SIGNER_DEVICE_CONFIGURATION_FILE=/etc/xroad/signer/devices.ini
+      - XROAD_SIGNER_RPC_LISTEN_ADDRESS=0.0.0.0
+      - XROAD_SIGNER_ADDON_HWTOKEN_ENABLED=true
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-ENABLED=true
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MAX-TOTAL=3
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MAX-IDLE=2
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-POOL-MIN-IDLE=1
+      - XROAD_SIGNER_ADDON_HWTOKEN_SESSION-ACQUIRE-TIMEOUT=5S
+      - XROAD_SIGNER_MODULES_SOFTHSM2_LIBRARY=/usr/lib/softhsm/libsofthsm2.so
+      - XROAD_SIGNER_MODULES_SOFTHSM2_OS_LOCKING_OK=true
+      - XROAD_SIGNER_MODULES_SOFTHSM2_LIBRARY_CANT_CREATE_OS_THREADS=true
+      - QUARKUS_LOG_LEVEL=INFO
+      - QUARKUS_LOG_CATEGORY__ORG_NIIS_XROAD_SIGNER__LEVEL=DEBUG
     ports:
       - "0:9999" # debug port
     healthcheck:
