fix: adding hwtoken support on the dev native lxd setup Refs: XRDDEV-2727

--- a/ansible/roles/xroad-ss/defaults/main.yml
+++ b/ansible/roles/xroad-ss/defaults/main.yml
@@ -7,3 +7,5 @@ variant: vanilla
 xroad_varpkg_fi: xroad-securityserver-fi
 xroad_varpkg_ee: xroad-securityserver-ee
 xroad_varpkg_vanilla: xroad-securityserver
+
+ss_enable_hwtokens: false
