chore: prop road.proxy.server-min-supported-client-version
Refs: XRDDEV-2974

--- a/src/packages/src/xroad/default-configuration/override-securityserver-fi.ini
+++ b/src/packages/src/xroad/default-configuration/override-securityserver-fi.ini
@@ -19,6 +19,7 @@ pool-enable-connection-reuse=true
 client-use-fastest-connecting-ssl-socket-autoclose=true
 client-use-idle-connection-monitor=true
 client-timeout=30000
+; todo xrd 8 (note: prop name changed)
 server-min-supported-client-version=7.5.0
 
 [proxy-ui-api]
