--- a/src/packages/src/xroad/default-configuration/override-securityserver-ee.ini
+++ b/src/packages/src/xroad/default-configuration/override-securityserver-ee.ini
@@ -9,6 +9,7 @@ enforce-token-pin-policy=true
 [proxy]
 ; Listen address of Client Proxy - localhost only
 connector-host=127.0.0.1
+; todo xrd 8 (note: prop name changed)
 server-min-supported-client-version=7.5.0
 
 client-http-port=80
