--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -76,6 +76,25 @@ xroad:
         common-name: ${XROAD_HOST:localhost}
         ip-subject-alt-names:
           - 127.0.0.1
+    acme-renewal-success-notification-enabled: true
+    acme-renewal-failure-notification-enabled: true
+    auth-cert-registered-notification-enabled: true
+    cert-auto-activation-notification-enabled: true
+    cert-auto-activation-failure-notification-enabled: true
+    acme-renewal-active: true
+    acme-renewal-retry-delay: 60
+    acme-renewal-interval: 3600
+    acme-renewal-time-before-expiration-date: 14
+    acme-keypair-renewal-time-before-expiration-date: 14
+    acme-authorization-wait-attempts: 5
+    acme-authorization-wait-interval: 5
+    acme-certificate-wait-attempts: 5
+    acme-certificate-wait-interval: 5
+    acme-certificate-account-key-pair-expiration: 365
+    acme-challenge-port: 80
+    auth-cert-reg-signature-digest-algorithm-id: SHA-512
+    key-management-api-whitelist: 127.0.0.0/8, ::1
+    regular-api-whitelist: 0.0.0.0/0, ::/0
 
 file-upload-endpoints:
   endpoint-definitions:
