chore: props xroad.signer.key-named-curve xroad.signer.key-length
Refs: XRDDEV-2974

--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -97,6 +97,7 @@ xroad:
     auth-cert-reg-signature-digest-algorithm-id: SHA-512
     key-management-api-whitelist: 127.0.0.0/8, ::1
     regular-api-whitelist: 0.0.0.0/0, ::/0
+    acme-key-length: 2048
 
 file-upload-endpoints:
   endpoint-definitions:
