--- a/src/security-server/admin-service/application/src/test/resources/application-test.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application-test.yml
@@ -48,3 +48,6 @@ xroad:
     password: testpassword
     contacts:
       'DEV:COM:1234': member1@example.org
+  proxy-ui-api:
+    key-management-api-whitelist: 127.0.0.0/8, ::1
+    regular-api-whitelist: 0.0.0.0/0, ::/0
