chore: remove unused files and restructure development and deployment file structure

--- a/src/security-server/e2e-test/src/intTest/resources/compose.aux.yaml
+++ b/src/security-server/e2e-test/src/intTest/resources/compose.aux.yaml
@@ -11,36 +11,12 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
-  ss0:
-    image: ${SS_IMG}
-    environment:
-      - PROXY_JMX_PORT=4299
-      - SIGNER_JMX_PORT=4298
-    deploy:
-      resources:
-        reservations:
-          memory: 512M
-        limits:
-          memory: 3G
-    healthcheck:
-      interval: 5s
-      retries: 40
-      test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
-  ss1:
-    image: ${SS_IMG}
-    environment:
-      - PROXY_JMX_PORT=4399
-      - SIGNER_JMX_PORT=4398
-    deploy:
-      resources:
-        reservations:
-          memory: 512M
-        limits:
-          memory: 3G
-    healthcheck:
-      interval: 5s
-      retries: 40
-      test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
+    ports:
+      - "0:4000" # Frontend
+      - "0:9994" # Signer debug
+      - "0:5432" # DB
+    networks:
+      - xroad-network
   testca:
     image: ${CA_IMG}
     deploy:
@@ -53,6 +29,8 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "http://localhost:8888/testca/certs" ]
+    networks:
+      - xroad-network
     volumes:
       - ca-volume:/home/ca/certs
   mailpit:
@@ -67,6 +45,8 @@ services:
       MP_SMTP_TLS_CERT: /data/mailpit_cert.pem
       MP_SMTP_TLS_KEY: /data/mailpit_key.pem
       MP_SMTP_AUTH_FILE: /data/password_file
+    networks:
+      - xroad-network
   isopenapi:
     image: ${IS_OPENAPI_IMG}
     deploy:
@@ -79,6 +59,8 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "http://localhost:8080/v3/api-docs" ]
+    networks:
+      - xroad-network
   issoap:
     image: ${IS_SOAP_IMG}
     deploy:
@@ -91,6 +73,8 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "http://localhost:8080/example-adapter/Endpoint?wsdl" ]
+    networks:
+      - xroad-network
     entrypoint: [ "java", "-Xms64m", "-Xmx256m", "-jar", "/example-adapter.war" ]
   isrest:
     image: wiremock/wiremock:latest
@@ -104,28 +88,40 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "http://localhost:8080/__admin/health" ]
+    networks:
+      - xroad-network
     volumes:
       - ./wiremock_mappings:/home/wiremock/mappings
   hurl:
     build:
         context: ../../development/hurl
         dockerfile: ./Dockerfile
+    command: >
+      --insecure
+      --variables-file /hurl-src/vars.env
+      --variable ss0_host=${PROXY_UI_0}
+      --variable ss1_host=${PROXY_UI_1}
+      --variable ss0_proxy=${PROXY_0}
+      --variable ss1_proxy=${PROXY_1}
+      --file-root /hurl-files
+      /hurl-src/setup.hurl
+      --very-verbose
+      --retry 12
+      --retry-interval 10000
     deploy:
       resources:
         reservations:
           memory: 24M
         limits:
           memory: 128M
+    networks:
+      - xroad-network
     volumes:
       - ca-volume:/hurl-files/ca
     depends_on:
       cs:
         condition: service_healthy
       testca:
-        condition: service_healthy
-      ss0:
-        condition: service_healthy
-      ss1:
         condition: service_healthy
       isopenapi:
         condition: service_healthy
@@ -135,3 +131,7 @@ services:
         condition: service_healthy
 volumes:
   ca-volume:
+networks:
+  xroad-network:
+    name: xroad-network
+    external: true
