chore: Remove nginx in front of management services

--- a/Docker/xrd-dev-stack/compose.aux.yaml
+++ b/Docker/xrd-dev-stack/compose.aux.yaml
@@ -1,6 +1,8 @@
 services:
   cs:
     image: ${CS_IMG}
+    environment:
+      - XROAD_HOST=cs
     deploy:
       resources:
         reservations:
