chore: Store Management Services' TLS credentials in OpenBao's KV (#2974)
* chore: Store Management Services' TLS credentials in OpenBao's KV

* chore: Adjust TLS credentials management to work with vault under the hood

* fix: Update CS admin service integration tests to align with Vault dependency

* chore: Remove nginx in front of management services

* chore: Remove unnecessary certchain acquiring endpoint from internal TLS service RPC

--- a/src/central-server/admin-service/application/src/main/resources/application.yml
+++ b/src/central-server/admin-service/application/src/main/resources/application.yml
@@ -39,7 +39,7 @@ server:
     ciphers: TLS_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
     protocol: TLS
     enabled-protocols: TLSv1.2,TLSv1.3
-    bundle: vault # Use TLS key & certificate provided by VaultSslBundleRegistrar
+    bundle: admin-service # Use TLS key & certificate provided by AdminServiceSslBundleRegistrar
   compression:
     enabled: true
     mime-types: application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css,image/jpeg
@@ -57,8 +57,6 @@ script:
   generate-backup:
     path: /usr/share/xroad/scripts/backup_xroad_center_configuration.sh
     valid-filename-pattern: "^(?!\\.)[\\w\\.\\-]+\\.gpg$"
-  generate-certificate:
-    path: /usr/share/xroad/scripts/generate_certificate.sh
   restore-configuration:
     path: /usr/share/xroad/scripts/restore_xroad_center_configuration.sh
   external-configuration-verifier:
@@ -66,9 +64,6 @@ script:
 
 gpgkeys:
   gpghome: /etc/xroad/gpghome
-
-certificates:
-  path: /etc/xroad/ssl/
 
 file-upload-endpoints:
   endpoint-definitions:
