--- a/src/central-server/registration-service/src/main/resources/application.yml
+++ b/src/central-server/registration-service/src/main/resources/application.yml
@@ -19,8 +19,14 @@ server:
       registered: false
     session:
       tracking-modes:
-  port: 8084
-  address: 127.0.0.1
+  port: 4001
+  ssl:
+    enabled: true
+    ciphers: TLS_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+    protocol: TLS
+    enabled-protocols: TLSv1.2,TLSv1.3
+    bundle: management-service # Use TLS key & certificate provided by ManagementServiceSslBundleRegistrar
+  address: 0.0.0.0
   forward-headers-strategy: native
 
 xroad:
@@ -31,3 +37,8 @@ xroad:
     rate-limit-cache-size: 10_000
     rate-limit-expire-after-access-minutes: 2
     api-base-url: https://127.0.0.1:4000/api/v1
+    tls:
+      certificate-provisioning:
+        common-name: ${XROAD_HOST:localhost}
+        ip-subject-alt-names:
+          - 127.0.0.1
