--- a/src/security-server/e2e-test/src/intTest/resources/compose.aux.yaml
+++ b/src/security-server/e2e-test/src/intTest/resources/compose.aux.yaml
@@ -1,6 +1,8 @@
 services:
   cs:
     image: ${CS_IMG}
+    environment:
+      - XROAD_HOST=cs
     deploy:
       resources:
         reservations:
