chore: turn of verbose proxy logs
Refs: XRDDEV-3002

--- a/src/service/proxy/proxy-core/src/test/resources/logging.properties
+++ b/src/service/proxy/proxy-core/src/test/resources/logging.properties
@@ -1,7 +1,7 @@
 loggers=org.jboss.logmanager
 
 # Root logger
-logger.level=ERROR
+logger.level=OFF
 logger.handlers=CONSOLE
 
 logger.org.jboss.logmanager.useParentHandlers=true
