chore: disable rate limit for CS dev image
Refs: XRDDEV-3002

--- a/development/docker/central-server/files/etc/xroad/conf.d/local.ini
+++ b/development/docker/central-server/files/etc/xroad/conf.d/local.ini
@@ -1,4 +1,6 @@
 [admin-service]
+# TODO: Rate limit can interfere with UI tests. This will be changed in follow-up task.
+rate-limit-enabled=false
 global-configuration-generation-rate-in-seconds = 10
 [configuration-client]
 #default 60
