--- a/src/central-server/registration-service/src/main/resources/application.yml
+++ b/src/central-server/registration-service/src/main/resources/application.yml
@@ -3,7 +3,8 @@ spring:
     import:
       - classpath:/xroad-common.yaml
   servlet:
-    multipart.enabled: false
+    multipart:
+      enabled: false
 server:
   error:
     whitelabel:
@@ -14,6 +15,7 @@ server:
       max-queue-capacity: 10000
       max: 32
       acceptors: 2
+    max-http-form-post-size: 51200
   servlet:
     jsp:
       registered: false
