--- a/src/gradle.properties
+++ b/src/gradle.properties
@@ -15,4 +15,5 @@ sonarqubeOrganization=
 frontendNodeVersion=22.17.1
 
 #Image creation defaults
+jib.console=plain
 xroadImageRegistry=localhost:5555
