chore: debug out of space issues
Refs: XRDDEV-3002

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -94,6 +94,12 @@ jobs:
           ./gradlew -Dorg.gradle.jvmargs=-Xmx6g -PsonarqubeHost=https://sonarcloud.io -PsonarqubeProjectKey=nordic-institute_X-Road -PsonarqubeOrganization=nordic-institute -PxroadBuildType=RELEASE build sonar test intTest jacocoTestReport -Pfrontend-npm-audit -PbuildImages=true -PxroadImageRegistry=localhost:5555
           echo "Available disk space post-build:"
           df -h
+          echo "Available disk space post-prune:"
+          docker system prune -f --volumes
+          df -h
+          echo "Deleting Quarkus-Build folders..."
+          find . -type d -name 'quarkus-build' -exec rm -rf
+          df -h
       - name: Test report
         env:
           NODE_OPTIONS: '--max-old-space-size=6144'
