chore: debug out of space issues
Refs: XRDDEV-3002

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -98,7 +98,7 @@ jobs:
           docker system prune -f --volumes
           df -h
           echo "Deleting Quarkus-Build folders..."
-          find . -type d -name 'quarkus-build' -exec rm -rf
+          find . -type d -name 'quarkus-build' -exec rm -rf {} +
           df -h
       - name: Test report
         env:
