--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -126,25 +126,25 @@ jobs:
         with:
           task: get-measurement
           label: 'Build, unit tests and packaging'
-      - name: Store files for arm packaging
-        uses: pyTooling/upload-artifact@v4 # https://github.com/actions/upload-artifact/issues/38
-        with:
-          name: workspace-for-arm
-          include-hidden-files: true
-          path: |
-            **
-            !**/src/lib/**
-            !**/src/test/**
-            !**/build/classes/**
-            !**/build/tmp/**
-            !**/build/allure-**
-            !**/build/test-results/**
-            !**/build/reports/**
-            !**/.git/**
-            !**/.pnpm-store/**
-            !**/pnpm-node/**
-            !**/node_modules/**
-            !**/executionHistory/**
+#      - name: Store files for arm packaging
+#        uses: pyTooling/upload-artifact@v4 # https://github.com/actions/upload-artifact/issues/38
+#        with:
+#          name: workspace-for-arm
+#          include-hidden-files: true
+#          path: |
+#            **
+#            !**/src/lib/**
+#            !**/src/test/**
+#            !**/build/classes/**
+#            !**/build/tmp/**
+#            !**/build/allure-**
+#            !**/build/test-results/**
+#            !**/build/reports/**
+#            !**/.git/**
+#            !**/.pnpm-store/**
+#            !**/pnpm-node/**
+#            !**/node_modules/**
+#            !**/executionHistory/**
       - name: Build RHEL8 packages
         run: |
           docker build -t rhel8 ${{ github.workspace }}/deployment/native-packages/docker/rpm-el8/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel8 ./deployment/native-packages/build-rpm.sh
@@ -152,7 +152,7 @@ jobs:
           rm -rf ${{ github.workspace }}/deployment/native-packages/build/rhel/8
       - name: Build RHEL9 packages
         run: |
-          docker build -t rhel9 ${{ github.workspace }}/deployment/native-packages/rpm-el9/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel9 ./deployment/native-packages/build-rpm.sh
+          docker build -t rhel9 ${{ github.workspace }}/deployment/native-packages/docker/rpm-el9/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel9 ./deployment/native-packages/build-rpm.sh
           echo "Packages built successfully, removing packages.."
           rm -rf ${{ github.workspace }}/deployment/native-packages/build/rhel/9
       - name: Build 22.04 (Jammy) packages
@@ -216,80 +216,81 @@ jobs:
         with:
           name: docker-images
           path: ${{ runner.temp }}/docker-images
-  BuildAndPackageOnArm:
-    name: Build and package code for arm architecture
-    needs: BuildAndPackageWithUnitTests
-    runs-on: ubuntu-22.04-arm
-    steps:
-      - name: Start Measurement
-        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
-        with:
-          task: start-measurement
-          label: 'Packaging for arm architecture'
-      - name: Ensure required packages
-        env:
-          DEBIAN_FRONTEND: noninteractive # Less output to log
-        run: sudo apt-get update && sudo apt-get install -y curl software-properties-common build-essential unzip debhelper devscripts
-      - name: Set up JDK 21
-        uses: actions/setup-java@v5
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          cache-read-only: ${{ github.ref != 'refs/heads/develop' }}
-          gradle-home-cache-cleanup: true
-          dependency-graph: generate-and-submit
-          add-job-summary-as-pr-comment: always
-      - name: Download workspace
-        uses: pyTooling/download-artifact@v5 # https://github.com/actions/upload-artifact/issues/38
-        with:
-          name: workspace-for-arm
-      - name: Set up measurement for arm packaging
-        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
-        with:
-          task: get-measurement
-          label: 'Set up arm packaging'
-      - name: Build RHEL8 packages
-        run: |
-          docker build -t rhel8 ${{ github.workspace }}/deployment/native-packages/docker/rpm-el8/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel8 ./deployment/native-packages/build-rpm.sh
-          echo "Packages built successfully, removing packages.."
-          rm -rf ${{ github.workspace }}/deployment/native-packages/build/rhel/8
-      - name: Build RHEL9 packages
-        run: |
-          docker build -t rhel9 ${{ github.workspace }}/deployment/native-packages/docker/rpm-el9/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel9 ./deployment/native-packages/build-rpm.sh
-          echo "Packages built successfully, removing packages.."
-          rm -rf ${{ github.workspace }}/deployment/native-packages/build/rhel/9
-      - name: Build 22.04 (Jammy) packages
-        env:
-          DEBEMAIL: 'info@niis.org'
-          DEBFULLNAME: 'NIIS'
-        run: ./deployment/native-packages/build-deb.sh jammy -release
-      - name: Build 24.04 (Noble) packages
-        env:
-          DEBEMAIL: 'info@niis.org'
-          DEBFULLNAME: 'NIIS'
-        run: |
-          ./deployment/native-packages/build-deb.sh noble -release
-          echo "Packages built successfully, removing packages.."
-          rm -rf ${{ github.workspace }}/deployment/native-packages/build/ubuntu24.04
-      - name: Store deb files for Docker dev images
-        uses: actions/upload-artifact@v4
-        with:
-          name: debian-packages-arm
-          path: deployment/native-packages/build/ubuntu22.04/*.deb
-          compression-level: 0 #No point in compressing these
-      - name: Measurement for arm packaging
-        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
-        with:
-          task: get-measurement
-          label: 'Packaging for arm architecture'
-      - name: Show Energy Results
-        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
-        with:
-          task: display-results
-          pr-comment: true
+#  BuildAndPackageOnArm:
+#    name: Build and package code for arm architecture
+#    needs: BuildAndPackageWithUnitTests
+#
+#    runs-on: ubuntu-22.04-arm
+#    steps:
+#      - name: Start Measurement
+#        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
+#        with:
+#          task: start-measurement
+#          label: 'Packaging for arm architecture'
+#      - name: Ensure required packages
+#        env:
+#          DEBIAN_FRONTEND: noninteractive # Less output to log
+#        run: sudo apt-get update && sudo apt-get install -y curl software-properties-common build-essential unzip debhelper devscripts
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v5
+#        with:
+#          java-version: '21'
+#          distribution: 'temurin'
+#      - name: Set up Gradle
+#        uses: gradle/actions/setup-gradle@v4
+#        with:
+#          cache-read-only: ${{ github.ref != 'refs/heads/develop' }}
+#          gradle-home-cache-cleanup: true
+#          dependency-graph: generate-and-submit
+#          add-job-summary-as-pr-comment: always
+#      - name: Download workspace
+#        uses: pyTooling/download-artifact@v5 # https://github.com/actions/upload-artifact/issues/38
+#        with:
+#          name: workspace-for-arm
+#      - name: Set up measurement for arm packaging
+#        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
+#        with:
+#          task: get-measurement
+#          label: 'Set up arm packaging'
+#      - name: Build RHEL8 packages
+#        run: |
+#          docker build -t rhel8 ${{ github.workspace }}/deployment/native-packages/docker/rpm-el8/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel8 ./deployment/native-packages/build-rpm.sh
+#          echo "Packages built successfully, removing packages.."
+#          rm -rf ${{ github.workspace }}/deployment/native-packages/build/rhel/8
+#      - name: Build RHEL9 packages
+#        run: |
+#          docker build -t rhel9 ${{ github.workspace }}/deployment/native-packages/docker/rpm-el9/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel9 ./deployment/native-packages/build-rpm.sh
+#          echo "Packages built successfully, removing packages.."
+#          rm -rf ${{ github.workspace }}/deployment/native-packages/build/rhel/9
+#      - name: Build 22.04 (Jammy) packages
+#        env:
+#          DEBEMAIL: 'info@niis.org'
+#          DEBFULLNAME: 'NIIS'
+#        run: ./deployment/native-packages/build-deb.sh jammy -release
+#      - name: Build 24.04 (Noble) packages
+#        env:
+#          DEBEMAIL: 'info@niis.org'
+#          DEBFULLNAME: 'NIIS'
+#        run: |
+#          ./deployment/native-packages/build-deb.sh noble -release
+#          echo "Packages built successfully, removing packages.."
+#          rm -rf ${{ github.workspace }}/deployment/native-packages/build/ubuntu24.04
+#      - name: Store deb files for Docker dev images
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: debian-packages-arm
+#          path: deployment/native-packages/build/ubuntu22.04/*.deb
+#          compression-level: 0 #No point in compressing these
+#      - name: Measurement for arm packaging
+#        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
+#        with:
+#          task: get-measurement
+#          label: 'Packaging for arm architecture'
+#      - name: Show Energy Results
+#        uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
+#        with:
+#          task: display-results
+#          pr-comment: true
   RunCSSystemTests:
     name: Run Central Server system tests
     needs: BuildAndPackageWithUnitTests
